--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -9,43 +9,17 @@
         <link rel="stylesheet" th:href="@{/css/mainContent.css}">
     </th:block>
     <link th:href="@{/css/productPage.css}" rel="stylesheet"/>
-    <link rel="stylesheet" th:href="@{https://www.w3schools.com/w3css/4/w3.css}">
-
-    <script th:src="@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js}"></script>
-
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
 </head>
 <body>
 <div layout:fragment="content">
     <div th:class="container">
         <div th:class="row">
-            <!--            <div class="w3-content" style="max-width:400px">-->
-            <!--                <img class="mySlides" th:src="@{'/uploadImg/'+${product.productMainImg}}"-->
-            <!--                     style="width:100%;display:none">-->
-            <!--                <img class="mySlides" th:src="@{'/uploadImg/'+${product.productSubImg1}}" style="width:100%">-->
-            <!--                <img class="mySlides" th:src="@{'/uploadImg/'+${product.productSubImg2}}"-->
-            <!--                     style="width:100%;display:none">-->
-
-            <!--                <div class="w3-row-padding w3-section">-->
-            <!--                    <div class="w3-col s4">-->
-            <!--                        <img class="demo w3-opacity w3-hover-opacity-off"-->
-            <!--                             th:src="@{'/uploadImg/'+${product.productMainImg}}" style="width:100%;cursor:pointer"-->
-            <!--                             onclick="currentDiv(1)">-->
-            <!--                    </div>-->
-            <!--                    <div class="w3-col s4">-->
-            <!--                        <img class="demo w3-opacity w3-hover-opacity-off"-->
-            <!--                             th:src="@{'/uploadImg/'+${product.productSubImg1}}" style="width:100%;cursor:pointer"-->
-            <!--                             onclick="currentDiv(2)">-->
-            <!--                    </div>-->
-            <!--                    <div class="w3-col s4">-->
-            <!--                        <img class="demo w3-opacity w3-hover-opacity-off"-->
-            <!--                             th:src="@{'/uploadImg/'+${product.productSubImg2}}" style="width:100%;cursor:pointer"-->
-            <!--                             onclick="currentDiv(3)">-->
-            <!--                    </div>-->
-            <!--                </div>-->
-
-
             <div th:class="col-md-4">
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                     <div class="carousel-inner">
@@ -95,7 +69,7 @@
                 </div>
                 <form action="" method="post" th:object="${basketVO}">
                     <div class="input-group">
-                        <select th:field="*{productColor}" class="custom-select col-md-7" id="inputGroupSelect01">
+                        <select th:field="*{productColor}" class="custom-select col-md-7" th:id="inputGroupSelect01">
                             <option th:value selected disabled>색상</option>
                             <option th:each="color : ${product.colorCodeVOList}"
                                     th:value="${color}"
@@ -106,9 +80,7 @@
                         <label>수량</label><input th:type="text" th:class="input-qty" th:id="qty"/>
                     </div>
                     <button type="submit" class="btn-basket" onclick="saveSessionStorage();
-                    window.open('/basketPop', '_blank', 'width=300px,height=300px,resizable=no,scrollbars=no,status=no,left=0px,top=0px'); return false;">
-                        장바구니
-                    </button>
+                    window.open('/basketPop', '_blank', 'width=300px,height=300px,resizable=no,scrollbars=no,status=no,left=0px,top=0px'); return false;">장바구니</button>
                     <a href="/basketPop" value="저장" onClick="saveSessionStorage(); window.open(this.href, '_blank',
                      'width=300px,height=300px,resizable=no,scrollbars=no,status=no,left=0px,top=0px'); return false;">저장</a>
                     <button type="submit" class="btn-buy-now">바로구매</button>
@@ -117,7 +89,7 @@
         </div>
 
 
-        <div th:class="container">
+        <div th:class="container-product_2">
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab"
@@ -161,11 +133,11 @@
             </div>
         </div>
     </div>
-</div>
-<script th:inline="javascript">
-            var memId2 = [[${jsonText}]];
-            var memId = JSON.parse(memId2);
-            console.log("memId : " + memId);
+    <script th:inline="javascript">
+
+        var memId2 = [[${jsonText}]];
+        var memId = JSON.parse(memId2);
+        console.log("memId : " + memId);
 
 
 
