--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" th:href="@{/css/mainContent.css}">
     </th:block>
     <link th:href="@{/css/productPage.css}" rel="stylesheet"/>
-    <link rel="stylesheet" th:href="@{https://www.w3schools.com/w3css/4/w3.css}">
+<!--    <link rel="stylesheet" th:href="@{https://www.w3schools.com/w3css/4/w3.css}">-->
 
     <script th:src="@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js}"></script>
 
@@ -17,9 +17,9 @@
 
 </head>
 <body>
-<div layout:fragment="content">
-    <div th:class="container">
-        <div th:class="row">
+<div layout:fragment="content" class="mt-5">
+    <div class="container">
+        <div class="row">
             <!--            <div class="w3-content" style="max-width:400px">-->
             <!--                <img class="mySlides" th:src="@{'/uploadImg/'+${product.productMainImg}}"-->
             <!--                     style="width:100%;display:none">-->
@@ -46,7 +46,7 @@
             <!--                </div>-->
 
 
-            <div th:class="col-md-4">
+            <div class="col-md-4">
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -77,8 +77,8 @@
                     </a>
                 </div>
             </div>
-            <div th:class="col-md-7">
-                <div th:class="production-item-stats">
+            <div class="col-md-7">
+                <div class="production-item-stats">
                     <h1 class="production-selling-header__title"><p
                             class="production-selling-header__title__brand-wrap"><a
                             class="production-selling-header__title__brand"
@@ -117,7 +117,7 @@
         </div>
 
 
-        <div th:class="container">
+        <div class="container">
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab"
