--- a/src/main/resources/templates/th/member/mypage/profile/noteSending.html
+++ b/src/main/resources/templates/th/member/mypage/profile/noteSending.html
@@ -14,7 +14,7 @@
     <th:block th:text="${sending}"/>
     </div>
     <div class="form-group">
-        <textarea id="msgContents" name="msgContents" style="width: 700px"></textarea>
+        <textarea id="msgContent" name="msgContent" style="width: 700px"></textarea>
     </div>
 
     <input type="button" id="sending" name="sending" value="보내기"/>
