--- a/src/main/resources/templates/th/main/chatting.html
+++ b/src/main/resources/templates/th/main/chatting.html
@@ -1,185 +1,63 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script type="text/javascript" th:src="@{/js/storeChat.js}"></script>
     <meta charset="UTF-8">
-    <title>채팅리스트</title>
-    <!--<style>
-        *{
-            margin:0;
-            padding:0;
-        }
-        .container{
-            width: 500px;
-            margin: 0 auto;
-            padding: 25px
-        }
-        .container h1{
-            text-align: left;
-            padding: 5px 5px 5px 15px;
-            color: #FFBB00;
-            border-left: 3px solid #FFBB00;
-            margin-bottom: 20px;
-        }
-        .roomContainer{
-            background-color: #F6F6F6;
+    <title>채팅방</title>
+    <style>
+        .chatting{
+            background-color: #2e97f4;
             width: 500px;
             height: 500px;
             overflow: auto;
         }
-        .roomList{
-            border: none;
+        .chatting .me{
+            color: #F6F6F6;
+            text-align: right;
         }
-        .roomList th{
-            border: 1px solid #FFBB00;
-            background-color: #fff;
-            color: #FFBB00;
-        }
-        .roomList td{
-            border: 1px solid #FFBB00;
-            background-color: #fff;
+        .chatting .others{
+            color: #FFE400;
             text-align: left;
-            color: #FFBB00;
         }
-        .roomList .num{
-            width: 75px;
-            text-align: center;
-        }
-        .roomList .room{
-            width: 350px;
-        }
-        .roomList .go{
-            width: 71px;
-            text-align: center;
-        }
-        button{
-            background-color: #FFBB00;
-            font-size: 14px;
-            color: #000;
-            border: 1px solid #000;
-            border-radius: 5px;
-            padding: 3px;
-            margin: 3px;
-        }
-        .inputTable th{
-            padding: 5px;
-        }
-        .inputTable input{
-            width: 330px;
-            height: 25px;
-        }
-    </style>-->
+    </style>
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>채팅방리스트</h1>
-        </div>
-        <div th:id="roomContainer" class="roomContainer">
-            <table th:id="roomList" class="roomList"></table>
-        </div>
+<div id="container" class="container">
+    <h1>채팅방 입장!</h1>
+    <!--<div th:id="chatId" type="hidden" th:text="${chatInfo.chatId}"/>
+    <div th:id="memberId" type="hidden" th:text="${chatInfo.memberId}"/>-->
+    <!--<sec:authorize access="hasRole('ROLE_MEMBER')" var="member"></sec:authorize>
+    <sec:authorize access="hasRole('ROLE_ADMIN')" var="admin"></sec:authorize>-->
+    <!--<input type="hidden" th:id="sessionId" th:value="">-->
+    <div id="chatting" class="chatting">
+
     </div>
-    <!--<div>
+<div id="sendMsg">
+    <table class="inputTable">
         <tr>
-            <th class="num">순서</th>
-            <th class="roomName">방 이름</th>
-            <th class="enterRoom"></th>
+            <th class="input-group-prepend"><label class="input-group-text">메시지</label></th>
+            <th><input class="form-control" type="text" id="message" placeholder="보내실 메시지를 입력하세요."></th>
+            <th class="input-group-append"><button class="btn btn-primary" onclick="sendMsg()" th:id="sendBtn">보내기</button></th>
         </tr>
-    </div>
-    <div>
-        <tr th:each="roomList: ${roomLists}">
-            <td class="num" th:text="${roomListStat}"></td>
-            <td class="roomName" th:text="${roomList.chatId}"></td>
-            <td class="enterRoom"><button type="button" th:onclick="|enterRoom${roomList.chatId}|">상담시작</button></td>
-        </tr>
-    </div>-->
-
-        <!--<table class="inputTable">
-            <tr>
-                <th class="input-group-prepend"><label class="input-group-text">방이름</label></th>
-                <th><input class="form-control" type="text" th:name="roomName" th:id="roomName"></th>
-                <th class="input-group-append"><button class="btn btn-primary" th:id="createRoom">방개설</button></th>
-            </tr>
-        </table>-->
-        <table class="table">
-            <thead>
-            <tr class="list-group list-group-horizontal">
-                <th>회원아이디</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody th:each="roomList: ${roomLists}">
-            <tr class="list-group list-group-horizontal">
-                <td th:text="${roomList.memberId}"></td>
-                <td><button class="btn btn-primary" th:data-id="${roomList.chatId}" id="createRoom" onclick="enterRoom()">상담시작</button></td>
-            </tr>
-            </tbody>
-        </table>
-    <script th:inline="javascript" type="text/javascript">
-        var chatId=$('#createRoom').attr('data-id');
-        function enterRoom() {
-            location.href="/enter/"+chatId;
+    </table>
+</div>
+    <script th:inline="javascript">
+        var chatId=[[${chatInfo.chatId}]];
+        console.log(chatId);
+        var admin=[[${chatInfo.adminId}]];
+        console.log(admin);
+        if(admin==null){
+            var sender=[[${chatInfo.memberId}]];
+        } else{
+            var sender=[[${chatInfo.adminId}]];
         }
-        /*var ws;
-        window.onload=function () {
-            getRoom();
-            createRoom();
-        }
-        function getRoom() {
-            commonAjax('/chatroom',"", 'get', function (result) {
-                createChatRoom(result);
-            });
-        }roomName
-        function createRoom(){
-            $('#createRoom').click(function () {
-                var msg={ roomName : $('#roomName').val() };
-                commonAjax('/chat', msg, 'post', function (result) {
-                    createChatRoom(result);
-                });
-                $('#roomName').val("");
-                location.reload();
-            });
-        }*/
+        console.log(sender);
 
-        /*function createChatRoom(res) {
-            if(res!=null){
-                var tag="<tr class=\"list-group list-group-horizontal\"><th class=\"list-group-item\">방이름</th><th class=\"list-group-item\"></th></tr>";
-                [].forEach.call(res, function (d) {
-                    var roomName=d.roomName.trim();
-                    var chatId=d.chatId;
-                    tag+="<tr class='list-group list-group-horizontal'><td class='list-group-item'>"+roomName+"</td>"+
-                              "<td class='list-group-item'><button class='btn btn-primary' type='button' onclick='enterRoom(\""+chatId+"\")'>상담시작</button></td></tr>";
-                });
-                /!*var tag="<tr><th class=\"num\">순서</th><th class=\"roomName\">방이름</th><th class=\"enterRoom\"></th></tr>";
-                [].forEach.call(res, function (d, index) {
-                    var roomName=d.roomName.trim();
-                    var chatId=d.chatId;
-                    tag+="<tr><td class='num'>"+(index+1)+"</td>"+
-                        "<td class='roomName'>"+roomName+"</td>"+
-                        "<td class='enterRoom'><button type='button' onclick='enterRoom(\""+chatId+"\")'>상담시작</button></td></tr>";
-                });*!/
-
-                $('#roomList').empty().append(tag);
-            }
-        }
-        function commonAjax(url, parameter, type, callback, contentType){
-            $.ajax({
-                url:url,
-                data:parameter,
-                type:type,
-                contentType:contentType!=null?contentType:'application/x-www-form-urlencoded; charset=UTF-8',
-                success:function (res) {
-                    callback(res);
-                },
-                    error:function (err) {
-                    console.log('error');
-                    callback(err);
-                }
-            });
-        }*/
     </script>
 </div>
 </body>
