--- a/src/main/resources/templates/th/main/categoryList.html
+++ b/src/main/resources/templates/th/main/categoryList.html
@@ -17,10 +17,10 @@
         <section class="container store-index-section store-index-product-list">
             <div class="virtualized-list row"
                  style="padding-top: 0px; padding-bottom: 3888px; transform: translateY(0px);">
-
                 <tr th:each="products : ${productList}">
                     <div class="col-6 col-md-3 product-item-wrap">
-                        <article class="production-item"><a class="production-item__overlay" th:href="@{/productions/productDetails(productNo=${products.productNo})}"></a>
+                        <article class="production-item"><a class="production-item__overlay"
+                                                            th:href="@{/productions/productDetails(productNo=${products.productNo})}"></a>
                             <div class="production-item-image production-item__image">
                                 <img class="image" alt="" th:src="@{'/uploadImg/'+${products.productMainImg}}"
                                      srcset="">
@@ -38,9 +38,7 @@
                         </article>
                     </div>
                 </tr>
-                </div>
             </div>
-
         </section>
     </div>
 </div>
