--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -54,23 +54,28 @@
                             </li>
 
 
-                            <li class="nav-item dropdown">
-                                <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
-                                   aria-expanded="false">
 
-                                    Dropdown
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Action</a>
-                                </div>
-                            </li>
+                            <div sec:authorize="!hasAnyRole('ROLE_ADMIN', 'ROLE_SELLER')">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link" href="#" id="navDropdown" role="button" aria-haspopup="true"
+                                       aria-expanded="false">
+
+                                        Dropdown
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navDropdown">
+                                        <a class="dropdown-item" href="#">Action</a>
+                                        <a class="dropdown-item" href="#">Action</a>
+                                        <a class="dropdown-item" href="#">Action</a>
+                                    </div>
+                                </li>
+                            </div>
+<!--                            </div>-->
+
 
                             <div class="nav-wrapper">
                                 <form class="form-inline ml-0 ml-md-3" action="/productions/searchlist" method="get">
                                     <div class="input-group input-group-sm">
-                                        <input class="form-control form-control-sm ml-3 w-75" type="search" placeholder="Search" aria-label="Search"
+                                        <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search" style="width:100px;"
                                                name="index" id="${index}" th:value="${index?:''}" onfocus="this.value=''">
 
                                         <div class="input-group-append">
