--- a/src/main/resources/templates/th/member/mypage/info/myInfoSetup.html
+++ b/src/main/resources/templates/th/member/mypage/info/myInfoSetup.html
@@ -20,13 +20,20 @@
     <div th:class="conteiner-nav">
         <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                <a class="nav-item nav-link" id="nav-profile1-tab" data-toggle="tab" href="#nav-profile1" role="tab"
+                   aria-controls="nav-profile1" aria-selected="true">myprofile</a>
                 <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab"
-                   aria-controls="nav-home" aria-selected="true">회원정보수정</a>
+                   aria-controls="nav-home" aria-selected="false">회원정보수정</a>
                 <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab"
                    aria-controls="nav-profile" aria-selected="false">비밀번호변경</a>
+
             </div>
         </nav>
-        <div class="tab-content" id="nav-tabContent">
+        <div class="tab-pane fade" id="nav-profile1" role="tabpanel" aria-labelledby="nav-profile1-tab">
+            <div class="container">
+                sddsfsdf
+            </div>
+        </div>
             <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                 <div class="container">
                     <form class="form-group-all col-md-4" th:method="post" th:action="update">
