--- a/src/main/resources/templates/th/member/mypage/profile/noteSending.html
+++ b/src/main/resources/templates/th/member/mypage/profile/noteSending.html
@@ -11,7 +11,7 @@
 <div class="container">
     <form action="/noteSendingProc" method="post" id="send" name="send">
     <div class="form-group">
-    <input type="hidden" th:value="${sending}"/>
+    <input type="text" th:value="${sending}"/>
     </div>
     <div class="form-group">
         <textarea id="msgContent" name="msgContent" style="width: 700px"></textarea>
