--- a/src/main/resources/templates/th/member/basket/basketPop.html
+++ b/src/main/resources/templates/th/member/basket/basketPop.html
@@ -12,20 +12,26 @@
 <link rel="stylesheet" media="screen"
       href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/templates-Commerce-CategoryFeed-c29fa8ce.chunk.css">
 <body>
-<div class="react-modal__content production-selling-cart-complete-modal"><h1
-        class="production-selling-cart-complete-modal__title">장바구니에 상품을 담았습니다</h1>
-    <a class="button button--color-blue button--size-60 button--shape-4 production-selling-cart-complete-modal__button"
-       onclick="selfCloseSubmit()">장바구니 보러가기</a>
-    <form method="get" action="" onsubmit="false">
-        <button class="button button--color-gray-7 button--size-60 button--shape-4 production-selling-cart-complete-modal__button"
-                type="button" onclick="selfClose()">쇼핑 계속하기
-        </button>
-    </form>
-    버튼 클릭 ->
+<div>
+    <div class="react-modal react-modal--center open open-active">
+        <div class="react-modal__content-wrap">
+            <div class="react-modal__content production-selling-cart-complete-modal"><h1
+                    class="production-selling-cart-complete-modal__title">장바구니에 상품을 담았습니다</h1>
+                <a class="button button--color-blue button--size-60 button--shape-4 production-selling-cart-complete-modal__button"
+                   onclick="selfCloseSubmit()">장바구니 보러가기</a>
+                <form method="get" action="" onsubmit="false">
+                    <button class="button button--color-gray-7 button--size-60 button--shape-4 production-selling-cart-complete-modal__button"
+                            type="button" onclick="selfClose()">쇼핑 계속하기
+                    </button>
+                </form>
+                버튼 클릭 ->
 
-    controller id에 해당하는 basket 내용 저장
-    or
-    session에 key value 저장
+                controller id에 해당하는 basket 내용 저장
+                or
+                session에 key value 저장
+            </div>
+        </div>
+    </div>
 </div>
 <script type="text/javascript">
     function selfCloseSubmit() {
