--- a/src/main/resources/templates/th/member/basket/btest.html
+++ b/src/main/resources/templates/th/member/basket/btest.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
+<script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script></div>
 <body>
 asd
 <form action="/loginPost" method="post">
