--- a/src/main/resources/templates/th/member/basket/memberBasket.html
+++ b/src/main/resources/templates/th/member/basket/memberBasket.html
@@ -4,7 +4,7 @@
       layout:decorator="th/layout/defaultLayout">
 <head>
     <meta charset="UTF-8">
-    <title>장바구니</title>
+    <title>Member장바구니</title>
     <link href="/img/theHouseLogo.png" rel="shortcut icon" type="image/x-icon">
     <th:block layout:fragment="css">
         <link rel="stylesheet" th:href="@{/css/mainContent.css}">
@@ -13,7 +13,6 @@
    <!--<link rel="stylesheet" media="screen"
           href="https://d1nyaccf3kuclt.cloudfront.net/dist/css/templates-Commerce-Cart-7a3e77c9.chunk.css">
    --> </head>
-<!--<script src="http://code.jquery.com/jquery-2.0.2.js"></script>-->
 <body>
 
 <div layout:fragment="content">
@@ -139,9 +138,8 @@
                                                                                             <option value="6">7</option>
                                                                                             <option value="7">8</option>
                                                                                             <option value="8">9</option>
-                                                                                            <option value="9">10
-
-                                                                                            <option value="11" th:selected="${list.qty}"></option>
+                                                                                            <option value="9">10</option>
+                                                                                            <option value="10" selected th:text="${list.qty}"></option>
                                                                                             </option>
                                                                                         </select><span
                                                                                             class="select-input__icon"><svg
@@ -207,6 +205,23 @@
                 </div>
             </div>
             <script type="text/javascript" th:inline="javascript">
+
+                /*$(document).ready(function(){
+
+                    $(셀렉트박스 option).each(function(){
+
+                        if($(this).val()=="${DB값}"){
+
+                            $(this).attr("selected","selected"); // attr적용안될경우 prop으로
+
+                        }
+
+                    });
+
+                });*/
+
+
+
                 $('#getTP').text( getTP());
                 $('#paymentTP').text(getTP());
 
