채팅퇴장처리 하는중 adminlayout생성

--- a/src/main/resources/templates/th/admin/chat/chatList.html
+++ b/src/main/resources/templates/th/admin/chat/chatList.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="th/layout/adminLayout">
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <meta charset="UTF-8">
     <title>채팅리스트</title>
 
 </head>
 <body>
+<div layout:fragment="content">
 <div class="container">
     <div class="row">
         <div class="col-md-12">
@@ -60,6 +60,7 @@
             location.href="/enter/"+chatId;
         }
     </script>
+</div>
 </div>
 </body>
 </html>
