--- a/src/main/resources/templates/th/admin/recommender/trainingTestPage.html
+++ b/src/main/resources/templates/th/admin/recommender/trainingTestPage.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="th/layout/adminLayout">
 <head>
     <meta charset="UTF-8">
     <title>트레이닝페이지</title>
 </head>
 <body>
-    <h1>추천시스템 트레이닝</h1>
+<div layout:fragment="content">
+    <a th:href="@{/admin/trainingStart}"><h1>추천시스템 트레이닝</h1></a>
+    누르지마시오
+</div>
 </body>
 </html>
