--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -84,6 +84,7 @@
                         </ul>
 
                         <ul class="navbar-nav">
+                            <div sec:authorize="!hasAnyRole('ROLE_ADMIN', 'ROLE_SELLER')">
                             <li class="nav-item">
                                 <a class="nav-link" th:href="@{/basket}">
                                     <span class="asdf" style="font-size: 16px; color: black;">
@@ -91,7 +92,7 @@
                                     </span>
                                 </a>
                             </li>
-
+                            </div>
 
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/customLogin}">
                                 <button sec:authorize="isAnonymous()" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">로그인</button>
@@ -103,8 +104,15 @@
                                 <button sec:authorize="isAnonymous()" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">회원가입</button>
                             </form>
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/user/profile}">
-                                <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">마이페이지</button>
+                                <button sec:authorize="hasAnyRole('ROLE_MEMBER', 'ROLE_USER')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">마이페이지</button>
                             </form>
+                            <form class="form-inline my-2 my-lg-0" th:action="@{/admin/statAdmin}">
+                                <button sec:authorize="hasRole('ROLE_ADMIN')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm">관리자홈</button>
+                            </form>
+                            <form class="form-inline my-2 my-lg-0" th:action="@{/seller}">
+                                <button sec:authorize="hasRole('ROLE_SELLER')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm">업체홈</button>
+                            </form>
+
 <!--                            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/customLogout}">-->
 <!--                                <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">로그아웃</button>-->
 <!--                                <button sec:authorize="isAnonymous()" th:href="@{/customLogin}" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">로그인</button>-->
