--- a/src/main/resources/templates/th/main/categoryList.html
+++ b/src/main/resources/templates/th/main/categoryList.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="th/layout/defaultLayout3">
+      layout:decorator="th/layout/defaultLayout">
 <head>
     <meta charset="UTF-8">
     <title>메인</title>
@@ -13,6 +13,7 @@
 </head>
 <body>
 <div layout:fragment="content">
+    <th:block th:replace="th/fragments/sidebarfilter"></th:block>
     <div id="store-index margin-right">
         <section class="container store-index-section store-index-product-list">
             <div class="virtualized-list row"
